tercera pre entrega del proyecto final

--- a/scss/base/_mapas.scss
+++ b/scss/base/_mapas.scss
@@ -4,7 +4,7 @@ $nav-home: (
     estilo-home: flex,
     ubicacion-home: center,
     color-home: whitesmoke,
-    font-s-home: 18px,
+    font-s-home: 1.3rem,
     margin-home: 0px,
     hover-home: #60A9A6,
 );
