--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,8 @@ body {
     body header nav div a:hover {
       background: #687a68; }
   body .headerIndex {
-    border-top: 20px solid #34626c6e; }
+    border-top: 15px solid transparent;
+    border-image: linear-gradient(to right, #34626C, black) 1; }
     body .headerIndex .logoPrincipal {
       width: 230px;
       height: 200px;
@@ -44,13 +45,13 @@ body {
         text-decoration: none;
         color: whitesmoke;
         padding: 10px;
-        font-size: 18px;
+        font-size: 1.3rem;
         margin: 0px; }
       body .headerIndex .indexNav ul li a:hover {
         background: #60A9A6; }
     body .headerIndex div div div img {
       width: auto;
-      height: 60vh; }
+      height: 65vh; }
   body .mainHome {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -60,7 +61,7 @@ body {
     align-items: center; }
     body .mainHome .h1Inicio {
       grid-area: h1;
-      margin: 40px 0; }
+      margin: 80px 0; }
       body .mainHome .h1Inicio .estiloH1Inicio {
         text-align: center;
         font-family: 'Abel', sans-serif;
@@ -70,7 +71,8 @@ body {
       width: 100%;
       height: 80%; }
     body .mainHome div .h3Index {
-      font-size: 1.5rem; }
+      font-size: 1.2rem;
+      margin: 10px; }
     body .mainHome .imgIndex1 {
       grid-area: img-1;
       justify-self: center;
@@ -79,8 +81,8 @@ body {
     body .mainHome .imgIndex2 {
       grid-area: img-2;
       justify-self: center;
-      text-align: center;
-      width: 75%; }
+      width: 55%;
+      text-align: center; }
     body .mainHome .imgIndex3 {
       grid-area: img-3;
       justify-self: center;
@@ -98,7 +100,6 @@ body {
     color: whitesmoke;
     background-color: black;
     overflow: hidden;
-    padding: 20px 0 30px 0;
     margin-top: 30px;
     font-family: 'Abel', sans-serif;
     display: flex;
@@ -140,12 +141,12 @@ body {
 body .headerProductos {
   width: 100%; }
   body .headerProductos .navProductos {
-    margin-left: 0; }
+    margin-left: 0;
+    margin-right: 0; }
 
 body .mainProductos {
   padding-right: 0; }
   body .mainProductos .cabeceraProductos {
-    width: 100%;
     height: 120px;
     background-image: url(../img/background.image/fondo.productos.jpg);
     border-bottom: 3px solid #59CE8F; }
@@ -155,9 +156,17 @@ body .mainProductos {
       font-family: 'Abel', sans-serif;
       font-size: 40px;
       margin-top: 30px; }
+  body .mainProductos .row {
+    margin-right: 0; }
   body .mainProductos div .lista {
     padding: 10px;
     margin: 30px 0; }
+    body .mainProductos div .lista .list-group {
+      --bs-list-group-active-bg: #59ce8f;
+      --bs-list-group-active-border-color: #59CE8F; }
+    body .mainProductos div .lista div h4 {
+      padding: 10px;
+      border-bottom: 0.5px groove #E1FFEE; }
     body .mainProductos div .lista div .productos {
       margin: 30px 0; }
       body .mainProductos div .lista div .productos .tarjeta {
@@ -170,8 +179,8 @@ body .mainProductos {
 
 /* estilos de la-tienda */
 body .tienda {
-  border-bottom: 20px solid green;
-  padding: 0; }
+  padding: 0;
+  margin-bottom: 0; }
   body .tienda .navTienda {
     position: static;
     width: 100%; }
@@ -179,21 +188,28 @@ body .tienda {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Satisfy', cursive;
-    color: #198519;
-    text-shadow: 3px 1px 3px black;
+    font-family: 'Abel', sans-serif;
+    color: green;
     margin: 0;
     width: 100%;
     height: 18vh;
-    background-image: url(../img/background.image/fondo.productos.jpg); }
+    background-image: url(../img/background.image/fondo.productos.jpg);
+    border-bottom: 3px solid #59CE8F; }
 
 body .mainLaTienda {
   display: grid;
-  grid-template-columns: 1.5fr 0.8fr;
-  grid-template-rows: 20% 80%;
-  grid-template-areas: "ubicacion ubicacion" "mainLaTienda1 mainLaTienda2";
+  grid-template-columns: 1.3fr 1fr;
+  grid-template-rows: 60% 10% 30%;
+  grid-template-areas: "portada portada" "ubicacion ubicacion" "mainLaTienda1 mainLaTienda2";
   column-gap: 10px;
   height: auto; }
+  body .mainLaTienda .portada {
+    grid-area: portada;
+    display: flex;
+    justify-content: center; }
+    body .mainLaTienda .portada img {
+      width: 60%;
+      height: 95%; }
   body .mainLaTienda .ubicacion {
     grid-area: ubicacion;
     display: flex;
@@ -208,12 +224,10 @@ body .mainLaTienda {
       height: 60px; }
   body .mainLaTienda .mainLaTienda1 {
     grid-area: mainLaTienda1;
-    margin: 0 0 50px 20px;
+    margin: 10px 0 0 60px;
     height: auto; }
     body .mainLaTienda .mainLaTienda1 .mapa {
-      width: 70%;
-      height: 60hv;
-      border: 1px solid black; }
+      width: 70%; }
   body .mainLaTienda .mainLaTienda2 {
     grid-area: mainLaTienda2;
     display: flex;
@@ -231,7 +245,7 @@ body .mainLaTienda {
 .hojaContacto {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 10% 55% 35%;
+  grid-template-rows: 10% 60% 30%;
   grid-template-areas: "header header" "main main" "footer footer";
   background-image: url(../img/background.image/fondo.contacto.jpg);
   background-size: 100vw 100vh;
@@ -302,48 +316,56 @@ body .headerMas {
   body .headerMas .navTienda {
     position: static;
     width: 100%; }
-  body .headerMas .h1Mas {
-    font-family: 'Edu VIC WA NT Beginner', cursive;
-    margin: 20px 0;
-    color: #59CE8F;
-    text-shadow: 4px 1px 5px black;
-    font-size: 40px; }
+  body .headerMas .encabezado {
+    width: 100%;
+    height: 100px;
+    background: #3d8676;
+    text-align: center;
+    border-bottom-left-radius: 50% 50%;
+    border-bottom-right-radius: 50% 50%; }
+    body .headerMas .encabezado .h1Mas {
+      font-family: 'Montserrat Alternates', sans-serif;
+      margin: 20px 0;
+      color: whitesmoke;
+      font-size: 2.5rem; }
 
 body .mainMas {
   display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 20% 30% 50%;
-  grid-template-areas: "estiloTip" "imgMas" "listaTip";
+  grid-template-columns: 1fr 1.5fr;
+  grid-template-rows: 100%;
+  grid-template-areas: "imgMas textoTip";
   align-items: center;
   height: 100%; }
-  body .mainMas .estiloTip {
-    grid-area: estiloTip;
-    display: flex;
-    justify-content: center;
-    font-family: 'Abel', sans-serif;
-    font-size: 1.5rem;
-    height: 100%; }
-    body .mainMas .estiloTip h2 {
-      margin: 10px 60px; }
   body .mainMas .imgMas {
     grid-area: imgMas;
     display: flex;
     justify-content: center; }
     body .mainMas .imgMas img {
-      width: 40%;
-      height: 40%; }
-  body .mainMas .listaTip {
-    grid-area: listaTip;
-    margin: 30px;
-    font-family: 'Abel', sans-serif;
-    font-size: 20px;
-    background-color: black;
-    color: whitesmoke;
-    width: auto;
-    border-radius: 20px; }
-    body .mainMas .listaTip ul {
-      margin: 30px;
-      padding: 10px; }
+      width: 70%;
+      height: 100%; }
+  body .mainMas .textoTip {
+    grid-area: textoTip;
+    font-family: 'Montserrat', sans-serif;
+    margin: 40px 5px; }
+    body .mainMas .textoTip .estiloTip {
+      grid-area: estiloTip;
+      display: flex;
+      justify-content: start;
+      height: 100%; }
+      body .mainMas .textoTip .estiloTip h2 {
+        font-size: 1.5rem;
+        font-weight: bold; }
+    body .mainMas .textoTip .listaTip {
+      grid-area: listaTip;
+      margin: 0;
+      font-size: 1rem;
+      background-color: #A084CA;
+      color: white;
+      width: 75%;
+      border-radius: 20px; }
+      body .mainMas .textoTip .listaTip ul {
+        margin: 15px;
+        padding: 10px; }
 
 /* Media Queries */
 @media screen and (max-width: 800px) {
@@ -418,8 +440,14 @@ body .mainMas {
     .hojaContacto .footerStyleContacto {
       display: none; }
   /* Mas.. */
+  body .headerMas .encabezado {
+    height: auto; }
   body .mainMas {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: auto; } }
+    height: auto; }
+    body .mainMas .textoTip .estiloTip {
+      justify-content: center; }
+    body .mainMas .textoTip .listaTip {
+      width: auto; } }
