--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -12,7 +12,7 @@
 
 body{
     height: 100%;
-    header{
+    header {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -33,7 +33,8 @@ body{
         }
     }
     .headerIndex{
-        border-top: 20px solid #34626c6e;
+        border-top: 15px solid transparent;
+        border-image: linear-gradient(to right, $color-principal, black) 1;
         .logoPrincipal{
             width: 230px;
             height: 200px;
@@ -79,7 +80,7 @@ body{
                     div{
                         img{
                             width: auto;
-                            height: 60vh;
+                            height: 65vh;
                         }
                     }
                 }
@@ -96,7 +97,7 @@ body{
         align-items: center;
         .h1Inicio{
             grid-area: h1;
-            margin: 40px 0;
+            margin: 80px 0;
             .estiloH1Inicio{
                 text-align: center;
                 font-family: 'Abel', sans-serif;
@@ -110,7 +111,8 @@ body{
                 height: 80%;
             }
             .h3Index{
-                font-size: 1.5rem;
+                font-size: 1.2rem;
+                margin: 10px;
             }
         }
         .imgIndex1{
@@ -119,9 +121,7 @@ body{
         }
         .imgIndex2{
             grid-area: img-2;
-            justify-self: center;
-            text-align: center;
-            width: 75%;
+            @include grid-tarjetas;
         }
         .imgIndex3{
             grid-area: img-3;
@@ -139,7 +139,6 @@ body{
         color: whitesmoke;  
         background-color: black;
         overflow: hidden;
-        padding: 20px 0 30px 0;
         margin-top: 30px;
         font-family: 'Abel', sans-serif;
         display: flex;
@@ -196,12 +195,12 @@ body{
         width: 100%;
         .navProductos{
             margin-left: map-get($map: $nav-pages, $key: margin-menu);
+            margin-right: 0;
         }
     }
     .mainProductos{
         padding-right: 0;
         .cabeceraProductos{
-            width: 100%;
             height: 120px;
             background-image: url(../img/background.image/fondo.productos.jpg);
             @extend %img-titulo;
@@ -214,11 +213,22 @@ body{
                 margin-top: 30px;
             }
         }
+        .row{
+            margin-right: 0;
+        }
         div{
             .lista{
                 padding: 10px;
                 margin: 30px 0;
-                div{         
+                .list-group{
+                    --bs-list-group-active-bg: #59ce8f;
+                    --bs-list-group-active-border-color: #59CE8F;
+                }
+                div{
+                    h4{
+                        padding: 10px;
+                        border-bottom: 0.5px groove #E1FFEE;
+                    }         
                     .productos{
                         margin: 30px 0;
                         .tarjeta{
@@ -240,8 +250,8 @@ body{
 
 body{
     .tienda{
-        border-bottom: 20px solid green;
         padding: 0;
+        margin-bottom: 0;
         .navTienda{
             position: map-get($map: $nav-pages, $key: posicion-pages);
             width: map-get($map: $nav-pages, $key: w-pages);
@@ -250,26 +260,36 @@ body{
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Satisfy', cursive;   
-            color: rgb(25, 133, 25);
-            text-shadow: 3px 1px 3px black;
+            font-family: 'Abel', sans-serif;   
+            color: green;
             margin: 0;  
             width: 100%;
             height: 18vh;
             background-image: url(../img/background.image/fondo.productos.jpg);
             @extend %img-titulo;
+            border-bottom: 3px solid #59CE8F;                
         }
     }
     .mainLaTienda{
         display: grid;
-        grid-template-columns: 1.5fr 0.8fr;
-        grid-template-rows: 20% 80%;
+        grid-template-columns: 1.3fr 1fr;
+        grid-template-rows: 60% 10% 30%;
         grid-template-areas:
+                            "portada portada"
                             "ubicacion ubicacion"
                             "mainLaTienda1 mainLaTienda2" ;
                             
         column-gap: 10px;
         height: auto;
+        .portada{
+            grid-area: portada;
+            display: flex;
+            justify-content: center;
+            img{
+                width: 60%;
+                height: 95%;
+            }
+        }
         .ubicacion{
             grid-area: ubicacion;
             display: flex;
@@ -287,12 +307,10 @@ body{
         }
         .mainLaTienda1{
             grid-area: mainLaTienda1;
-            margin: 0 0 50px 20px;
+            margin: 10px 0 0 60px;
             height: auto;
             .mapa{
                 width: 70%;
-                height: 60hv;
-                border: 1px solid black;
             }
         }
         .mainLaTienda2{
@@ -318,7 +336,7 @@ body{
 .hojaContacto{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 10% 55% 35%;
+    grid-template-rows: 10% 60% 30%;
     grid-template-areas:
                         "header header"
                         "main main"
@@ -410,56 +428,64 @@ body{
             position: map-get($map: $nav-pages, $key:posicion-pages);
             width: map-get($map: $nav-pages, $key:w-pages);
         }
-        .h1Mas{
-            font-family: 'Edu VIC WA NT Beginner', cursive;
-            margin: 20px 0;
-            color: #59CE8F;
-            text-shadow: 4px 1px 5px black; 
-            font-size: 40px; 
+        .encabezado{
+            width: 100%;
+            height: 100px;
+            background: #3d8676;
+            text-align: center;
+            border-bottom-left-radius: 50% 50%;
+            border-bottom-right-radius: 50% 50%;
+            .h1Mas{
+                font-family: 'Montserrat Alternates', sans-serif;
+                margin: 20px 0;
+                color: whitesmoke;
+                font-size: 2.5rem; 
+            }
         }
     }
     .mainMas{
         display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: 20% 30% 50%;
+        grid-template-columns: 1fr 1.5fr;
+        grid-template-rows: 100%;
         grid-template-areas: 
-                            "estiloTip"
-                            "imgMas"
-                            "listaTip";
+                            "imgMas textoTip";
         align-items: center;
         height: 100%;
-        .estiloTip{
-            grid-area: estiloTip;
-            display: flex;
-            justify-content: center;
-            font-family: 'Abel', sans-serif;
-            font-size: 1.5rem;
-            height: 100%;
-            h2{
-                margin: 10px 60px;
-            }
-        }
         .imgMas{
             grid-area: imgMas;
             display: flex;
             justify-content: center;
             img{
-                width: 40%;
-                height: 40%;
+                width: 70%;
+                height: 100%;
             }
         }
-        .listaTip{
-            grid-area: listaTip;
-            margin: 30px;
-            font-family: 'Abel', sans-serif;
-            font-size: 20px;
-            background-color: black;
-            color: whitesmoke;
-            width: auto;
-            border-radius: 20px;
-            ul{
-                margin: 30px;
-                padding: 10px;
+        .textoTip{
+            grid-area: textoTip;
+            font-family: 'Montserrat', sans-serif;
+            margin: 40px 5px;
+            .estiloTip{
+                grid-area: estiloTip;
+                display: flex;
+                justify-content: start;
+                height: 100%;
+                h2{
+                    font-size: 1.5rem;
+                    font-weight: bold;
+                }
+            }
+            .listaTip{
+                grid-area: listaTip;
+                margin: 0;
+                font-size: 1rem;
+                background-color: #A084CA;
+                color: white;
+                width: 75%;
+                border-radius: 20px;
+                ul{
+                    margin: 15px;
+                    padding: 10px;
+                }
             }
         }
     }
