--- a/scss/base/_mapas.scss
+++ b/scss/base/_mapas.scss
@@ -14,6 +14,5 @@ $nav-pages: (
     w-pages: 100%,
     margin-menu: 0,
     pdg-pages: 10px,
-    hover-menu: rgb(126, 189, 87),
-    hover-encabezado: rgb(104, 122, 104),
+    hover-encabezado: #73A9AD,
 );
