--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,14 @@
   padding: 0;
   box-sizing: border-box; }
 
-body .mainProductos .cabeceraProductos, body .tienda .h1Tienda {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat; }
+body .mainProductos .cabeceraProductos .h1Productos, body .tienda .h1Tienda {
+  text-align: center;
+  color: white;
+  font-family: 'Montserrat Alternates', sans-serif; }
+
+body main .seccion-3 .prop1, body main .seccion-3 .prop2, body main .seccion-3 .prop3, body main .seccion-3 .prop4, body main .seccion-3 .prop5, body main .seccion-3 .prop6 {
+  display: flex;
+  font-weight: bold; }
 
 /* estilos del index*/
 body {
@@ -17,9 +21,9 @@ body {
     align-items: center;
     margin-bottom: 40px; }
     body header nav ul li a:hover {
-      background: #7ebd57; }
+      background: #73A9AD; }
     body header nav div a:hover {
-      background: #687a68; }
+      background: #73A9AD; }
   body .headerIndex {
     border-top: 15px solid transparent;
     border-image: linear-gradient(to right, #34626C, black) 1; }
@@ -48,15 +52,17 @@ body {
         font-size: 1.3rem;
         margin: 0px; }
       body .headerIndex .indexNav ul li a:hover {
-        background: #60A9A6; }
+        background: #60A9A6;
+        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.562);
+        border-radius: 50px; }
     body .headerIndex div div div img {
       width: auto;
       height: 65vh; }
   body .mainHome {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 20% 80%;
-    grid-template-areas: "h1 h1 h1 h1" "img-1 img-2 img-3 img-4";
+    grid-template-rows: 20% 70% 10%;
+    grid-template-areas: "h1 h1 h1 h1" "img-1 img-2 img-3 img-4" "button button button button";
     justify-items: center;
     align-items: center; }
     body .mainHome .h1Inicio {
@@ -64,7 +70,7 @@ body {
       margin: 80px 0; }
       body .mainHome .h1Inicio .estiloH1Inicio {
         text-align: center;
-        font-family: 'Abel', sans-serif;
+        font-family: 'Combo', cursive;
         font-size: 200%;
         font-weight: bold; }
     body .mainHome div img {
@@ -73,6 +79,8 @@ body {
     body .mainHome div .h3Index {
       font-size: 1.2rem;
       margin: 10px; }
+    body .mainHome div p del {
+      color: gray; }
     body .mainHome .imgIndex1 {
       grid-area: img-1;
       justify-self: center;
@@ -96,6 +104,18 @@ body {
     body .mainHome .animacionCard:hover {
       transform: scale(1.3);
       box-shadow: 2px 2px 10px rgba(75, 72, 72, 0.24); }
+    body .mainHome button {
+      grid-area: button;
+      width: 18%;
+      height: 2.3rem;
+      background-color: black;
+      border-radius: 50px; }
+      body .mainHome button a {
+        text-decoration: none;
+        color: white; }
+    body .mainHome button:hover {
+      transform: scale(1.1);
+      box-shadow: 1px 1px 10px black; }
   body footer {
     color: whitesmoke;
     background-color: black;
@@ -128,9 +148,12 @@ body {
       body footer div .logoRedes .logoI {
         width: 40px;
         height: 40px; }
-      body footer div .logoRedes .logoStyle {
-        font-size: 17px;
-        margin-top: 10px; }
+      body footer div .logoRedes a {
+        text-decoration: none; }
+        body footer div .logoRedes a .logoStyle {
+          color: whitesmoke;
+          font-size: 17px;
+          margin-top: 10px; }
       body footer div .logoRedes .logoF {
         width: 30px;
         height: 30px;
@@ -148,13 +171,10 @@ body .mainProductos {
   padding-right: 0; }
   body .mainProductos .cabeceraProductos {
     height: 120px;
-    background-image: url(../img/background.image/fondo.productos.jpg);
-    border-bottom: 3px solid #59CE8F; }
+    background-color: #3d8676;
+    border-bottom-left-radius: 50% 50%;
+    border-bottom-right-radius: 50% 50%; }
     body .mainProductos .cabeceraProductos .h1Productos {
-      text-align: center;
-      color: green;
-      font-family: 'Abel', sans-serif;
-      font-size: 40px;
       margin-top: 30px; }
   body .mainProductos .row {
     margin-right: 0; }
@@ -188,13 +208,12 @@ body .tienda {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: 'Abel', sans-serif;
-    color: green;
     margin: 0;
     width: 100%;
     height: 18vh;
-    background-image: url(../img/background.image/fondo.productos.jpg);
-    border-bottom: 3px solid #59CE8F; }
+    background-color: #B97A95;
+    border-bottom-left-radius: 50% 50%;
+    border-bottom-right-radius: 50% 50%; }
 
 body .mainLaTienda {
   display: grid;
@@ -319,7 +338,7 @@ body .headerMas {
   body .headerMas .encabezado {
     width: 100%;
     height: 100px;
-    background: #3d8676;
+    background: #54BAB9;
     text-align: center;
     border-bottom-left-radius: 50% 50%;
     border-bottom-right-radius: 50% 50%; }
@@ -331,9 +350,9 @@ body .headerMas {
 
 body .mainMas {
   display: grid;
-  grid-template-columns: 1fr 1.5fr;
-  grid-template-rows: 100%;
-  grid-template-areas: "imgMas textoTip";
+  grid-template-columns: 1fr 1.3fr;
+  grid-template-rows: 10% 90%;
+  grid-template-areas: "button button"  "imgMas textoTip";
   align-items: center;
   height: 100%; }
   body .mainMas .imgMas {
@@ -341,7 +360,7 @@ body .mainMas {
     display: flex;
     justify-content: center; }
     body .mainMas .imgMas img {
-      width: 70%;
+      width: 80%;
       height: 100%; }
   body .mainMas .textoTip {
     grid-area: textoTip;
@@ -351,10 +370,16 @@ body .mainMas {
       grid-area: estiloTip;
       display: flex;
       justify-content: start;
-      height: 100%; }
+      align-items: center;
+      width: 200px;
+      height: 200px;
+      border-radius: 100px;
+      background-color: #59ff5986;
+      text-align: center; }
       body .mainMas .textoTip .estiloTip h2 {
         font-size: 1.5rem;
-        font-weight: bold; }
+        font-weight: bold;
+        padding: 10px; }
     body .mainMas .textoTip .listaTip {
       grid-area: listaTip;
       margin: 0;
@@ -362,10 +387,301 @@ body .mainMas {
       background-color: #A084CA;
       color: white;
       width: 75%;
-      border-radius: 20px; }
+      border-radius: 20px;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3); }
       body .mainMas .textoTip .listaTip ul {
-        margin: 15px;
+        margin: 10px;
         padding: 10px; }
+  body .mainMas .anteriores {
+    grid-area: button;
+    display: flex;
+    justify-content: right;
+    margin-right: 50px; }
+    body .mainMas .anteriores button {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 18%;
+      height: auto;
+      background-color: black;
+      color: white;
+      font-family: 'Montserrat', sans-serif;
+      border: none;
+      border-radius: 5px; }
+      body .mainMas .anteriores button .icono {
+        padding: 0 15px; }
+      body .mainMas .anteriores button a {
+        text-decoration: none;
+        color: whitesmoke;
+        font-size: auto; }
+    body .mainMas .anteriores button:hover {
+      background-color: #59ce8f;
+      box-shadow: 1px 1px 7px black; }
+
+/* Estilos de Nutritips */
+body header .navTips {
+  position: static;
+  width: 100%; }
+
+body header .h1Tips {
+  width: 100%; }
+  body header .h1Tips h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.9rem;
+    font-weight: bold;
+    color: #54BAB9;
+    margin: 20px 0 0 80px; }
+
+body main .seccion-1 {
+  display: grid;
+  height: 50vw;
+  margin: 15px 80px 80px 80px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 30% 30% 30%;
+  grid-template-areas: "principal principal tip-1" "principal principal tip-2"  "tipUltimo tip-4 tip-3";
+  gap: 20px; }
+  body main .seccion-1 div a {
+    text-decoration: none;
+    padding: 5px;
+    color: whitesmoke;
+    background-color: rgba(0, 0, 0, 0.39);
+    border-radius: 5px;
+    box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.5); }
+  body main .seccion-1 div a:hover {
+    font-size: 1.3rem; }
+  body main .seccion-1 .principal {
+    grid-area: principal;
+    background-image: url(../img/background.image/nutritip-principal.webp);
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: whitesmoke;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; }
+    body main .seccion-1 .principal p {
+      font-size: 3rem;
+      font-weight: bold; }
+  body main .seccion-1 .tip-1 {
+    grid-area: tip-1;
+    background-image: url(../img/background.image/mas-page2.PNG);
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: whitesmoke;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; }
+  body main .seccion-1 .tip-2 {
+    grid-area: tip-2;
+    background-image: url(../img/background.image/mas-page3.PNG);
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: whitesmoke;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; }
+  body main .seccion-1 .tip-3 {
+    grid-area: tip-3;
+    background-color: #B97A95;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: whitesmoke;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; }
+  body main .seccion-1 .tip-4 {
+    grid-area: tip-4;
+    background-color: #59CE8F;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: whitesmoke;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; }
+  body main .seccion-1 .tipUltimo {
+    grid-area: tipUltimo;
+    background-image: url(../img/background.image/mas-page.PNG);
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: whitesmoke;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; }
+
+body main .seccion-2 {
+  display: grid;
+  height: 60vw;
+  grid-template-columns: 2.2fr 1fr;
+  grid-template-rows: 50% 50%;
+  grid-template-areas: "texto img-encabezado" "img-fondo img-fondo";
+  background-color: #F2D388;
+  border-top: 20px solid rgba(0, 0, 0, 0.8);
+  border-bottom: 20px solid rgba(0, 0, 0, 0.8);
+  font-family: 'Montserrat', sans-serif;
+  margin-bottom: 80px; }
+  body main .seccion-2 .imgCabezaS2 {
+    grid-area: img-encabezado;
+    display: flex;
+    align-items: flex-end;
+    margin-right: 80px; }
+    body main .seccion-2 .imgCabezaS2 img {
+      height: 95%; }
+  body main .seccion-2 .texto {
+    grid-area: texto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: start;
+    margin-left: 22%; }
+    body main .seccion-2 .texto .titulo {
+      font-size: 1.2rem;
+      font-weight: bold;
+      padding: 10px 0; }
+  body main .seccion-2 .imgFondoS2 {
+    grid-area: img-fondo;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    margin: 0 80px; }
+    body main .seccion-2 .imgFondoS2 img {
+      width: 80%;
+      height: 95%;
+      border-radius: 20px;
+      box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.3); }
+
+body main .seccion-3 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 10% 8% 25% 8% 7% 7% 35%;
+  grid-template-areas: "h2 h2 h2 h2" "subtitulo subtitulo subtitulo subtitulo" "textos3 textos3 textos3 textos3" "h3 h3 h3 h3" "prop1 prop2 prop3 prop4" "prop5 prop5 prop6 prop6" "imgs3 imgs3 imgs3 imgs3";
+  height: 70vw;
+  font-family: 'Combo', cursive;
+  border-bottom: 20px solid rgba(0, 0, 0, 0.8); }
+  body main .seccion-3 .tituloS3 {
+    grid-area: h2;
+    display: flex;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+    align-items: flex-end; }
+    body main .seccion-3 .tituloS3 h2 {
+      color: #790252;
+      font-size: 3rem;
+      font-weight: bold; }
+  body main .seccion-3 .subtituloS3 {
+    grid-area: subtitulo;
+    display: flex;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
+    font-weight: bold; }
+  body main .seccion-3 .textoS3 {
+    grid-area: textos3;
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    body main .seccion-3 .textoS3 p {
+      font-size: 1.3rem;
+      color: #790252;
+      font-weight: 400; }
+  body main .seccion-3 .h3S3 {
+    grid-area: h3;
+    display: flex;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+    align-items: flex-start; }
+    body main .seccion-3 .h3S3 h3 {
+      font-family: 'Combo', cursive;
+      font-weight: bold;
+      font-size: 2rem; }
+  body main .seccion-3 .prop1 {
+    grid-area: prop1;
+    justify-content: end; }
+    body main .seccion-3 .prop1 p {
+      font-size: 1.3rem; }
+  body main .seccion-3 .prop2 {
+    grid-area: prop2;
+    justify-content: center; }
+    body main .seccion-3 .prop2 p {
+      font-size: 1.3rem; }
+  body main .seccion-3 .prop3 {
+    grid-area: prop3;
+    justify-content: center; }
+    body main .seccion-3 .prop3 p {
+      font-size: 1.3rem; }
+  body main .seccion-3 .prop4 {
+    grid-area: prop4;
+    justify-content: start; }
+    body main .seccion-3 .prop4 p {
+      font-size: 1.3rem; }
+  body main .seccion-3 .prop5 {
+    grid-area: prop5;
+    justify-content: center; }
+    body main .seccion-3 .prop5 p {
+      font-size: 1.3rem;
+      padding: 10px; }
+  body main .seccion-3 .prop6 {
+    grid-area: prop6;
+    justify-content: center; }
+    body main .seccion-3 .prop6 p {
+      font-size: 1.3rem;
+      padding: 10px; }
+  body main .seccion-3 div p {
+    z-index: 1; }
+  body main .seccion-3 .imgS3 {
+    grid-area: imgs3;
+    height: 100%; }
+    body main .seccion-3 .imgS3 img {
+      position: relative;
+      top: -50%;
+      left: 35%;
+      z-index: 0; }
+
+body main .seccion-4 {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  /*grid-template-areas: ;*/ }
+
+body main .seccion-5 {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto;
+  /*grid-template-areas: ;*/ }
 
 /* Media Queries */
 @media screen and (max-width: 800px) {
@@ -373,20 +689,28 @@ body .mainMas {
   body header .menuNav {
     display: flex;
     flex-direction: column;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: auto; }
-    body header .menuNav .indexNav ul {
-      display: flex;
-      flex-wrap: nowrap;
+    body header .menuNav .indexNav {
       width: auto; }
-      body header .menuNav .indexNav ul li a {
-        width: 80%;
-        height: auto; }
+      body header .menuNav .indexNav ul {
+        display: flex;
+        flex-wrap: nowrap;
+        padding-left: 0;
+        margin-bottom: 0; }
+        body header .menuNav .indexNav ul li {
+          width: auto; }
+          body header .menuNav .indexNav ul li a {
+            width: auto;
+            height: auto; }
     body header .menuNav div div div img {
       height: auto; }
   body .mainHome {
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    align-content: center; }
+    body .mainHome button {
+      width: auto; }
   body footer {
     display: flex;
     flex-direction: column; }
@@ -430,6 +754,8 @@ body .mainMas {
       .hojaContacto .mainContacto .formulario fieldset .form {
         display: flex;
         flex-direction: column; }
+        .hojaContacto .mainContacto .formulario fieldset .form input {
+          width: auto; }
       .hojaContacto .mainContacto .formulario fieldset .formDistinto input {
         width: 100%; }
       .hojaContacto .mainContacto .formulario fieldset .formButton {
@@ -445,9 +771,17 @@ body .mainMas {
   body .mainMas {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     height: auto; }
-    body .mainMas .textoTip .estiloTip {
-      justify-content: center; }
-    body .mainMas .textoTip .listaTip {
-      width: auto; } }
+    body .mainMas .anteriores {
+      width: 100%;
+      height: auto;
+      margin-bottom: 30px; }
+      body .mainMas .anteriores .buttonMas {
+        width: auto; }
+    body .mainMas .textoTip {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%; }
+      body .mainMas .textoTip .listaTip {
+        width: auto; } }
