--- a/scss/base/_mediaqueries.scss
+++ b/scss/base/_mediaqueries.scss
@@ -9,16 +9,19 @@
             .menuNav{
                 display: flex;
                 flex-direction: column;
-                flex-wrap: nowrap;
+                flex-wrap: wrap;
                 width: auto;
                 .indexNav{
+                    width: auto;
                     ul{
                         display: flex;
                         flex-wrap: nowrap;
-                        width: auto;
+                        padding-left: 0;
+                        margin-bottom: 0;
                         li{
+                            width: auto;
                             a{
-                                width: 80%;
+                                width: auto;
                                 height: auto;
                             }
                         }
@@ -38,6 +41,10 @@
         .mainHome{
             display: flex;
             flex-direction: column;
+            align-content: center;
+            button{
+                width: auto;
+            }
         }
         footer{
             display: flex;
@@ -105,10 +112,13 @@
             .formulario{
                 width: 100%;
                 margin: 30px 0;
-                fieldset{
+                fieldset{  
                     .form{
                         display: flex;
                         flex-direction: column;
+                        input{
+                            width: auto;
+                        }
                     }
                     .formDistinto{
                         input{
@@ -141,12 +151,20 @@
         .mainMas{
             display: flex;
             flex-direction: column;
-            justify-content: center;
             height: auto;
-            .textoTip{
-                .estiloTip{
-                    justify-content: center;
+            .anteriores{
+                width: 100%;
+                height: auto;
+                margin-bottom: 30px;
+                .buttonMas{
+                    width: auto;
                 }
+            }
+            .textoTip{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                width: 100%;
                 .listaTip{
                     width: auto;
                 }
