--- a/scss/base/_mixin.scss
+++ b/scss/base/_mixin.scss
@@ -8,3 +8,29 @@
     transform: scale(1.3);
     box-shadow: 2px 2px 10px rgba(75, 72, 72, 0.24) ;
 }
+
+@mixin animacion-button{
+    transform: scale(1.1);
+    box-shadow: 1px 1px 10px black;
+}
+
+@mixin tips-anteriores {
+    border-radius: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: whitesmoke;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.1rem;
+    font-weight: 400;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+@mixin estilos-seccion3 {
+    display: flex;
+    justify-content: center;
+    font-family: 'Montserrat', sans-serif;
+}
