--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -21,7 +21,7 @@ body{
             ul{
                 li{
                     a:hover{
-                        background: map-get($map: $nav-pages, $key: hover-menu);
+                        background: map-get($map: $nav-pages, $key: hover-encabezado);
                     }
                 }
             }
@@ -71,6 +71,8 @@ body{
                         }
                         a:hover{
                             background: map-get($map: $nav-home, $key: hover-home);
+                            box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.562);
+                            border-radius: 50px;
                         }
                     }
                 }
@@ -89,10 +91,11 @@ body{
     .mainHome{
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr ;
-        grid-template-rows: 20% 80% ;
+        grid-template-rows: 20% 70% 10% ;
         grid-template-areas:
                             "h1 h1 h1 h1"
-                            "img-1 img-2 img-3 img-4";
+                            "img-1 img-2 img-3 img-4"
+                            "button button button button";
         justify-items: center;
         align-items: center;
         .h1Inicio{
@@ -100,7 +103,7 @@ body{
             margin: 80px 0;
             .estiloH1Inicio{
                 text-align: center;
-                font-family: 'Abel', sans-serif;
+                font-family: 'Combo', cursive;
                 font-size: 200%;
                 font-weight: bold;
             }
@@ -113,6 +116,11 @@ body{
             .h3Index{
                 font-size: 1.2rem;
                 margin: 10px;
+            }
+            p{
+                del{
+                    color: gray;
+                }
             }
         }
         .imgIndex1{
@@ -133,6 +141,20 @@ body{
         }
         .animacionCard:hover{
             @include animacion-card;
+        }
+        button{
+            grid-area: button;
+            width: 18%;
+            height: 2.3rem;
+            background-color: black;
+            border-radius: 50px;
+            a{
+                text-decoration: none;
+                color: white;
+            }
+        }
+        button:hover{
+            @include animacion-button;
         }
     }
     footer{
@@ -173,9 +195,13 @@ body{
                     width: 40px;
                     height: 40px;
                 }
-                .logoStyle{
-                    font-size: 17px;
-                    margin-top: 10px;
+                a{
+                    text-decoration: none;
+                    .logoStyle{
+                        color: whitesmoke;
+                        font-size: 17px;
+                        margin-top: 10px;
+                    }
                 }
                 .logoF{
                     width: 30px;
@@ -202,14 +228,11 @@ body{
         padding-right: 0;
         .cabeceraProductos{
             height: 120px;
-            background-image: url(../img/background.image/fondo.productos.jpg);
-            @extend %img-titulo;
-            border-bottom: 3px solid #59CE8F;
+            background-color: #3d8676;
+            border-bottom-left-radius: 50% 50%;
+            border-bottom-right-radius: 50% 50%;
             .h1Productos{
-                text-align: center;
-                color: green;
-                font-family: 'Abel', sans-serif;
-                font-size: 40px;
+                @extend %encabezados;
                 margin-top: 30px;
             }
         }
@@ -260,14 +283,13 @@ body{
             display: flex;
             justify-content: center;
             align-items: center;
-            font-family: 'Abel', sans-serif;   
-            color: green;
             margin: 0;  
             width: 100%;
             height: 18vh;
-            background-image: url(../img/background.image/fondo.productos.jpg);
-            @extend %img-titulo;
-            border-bottom: 3px solid #59CE8F;                
+            background-color: #B97A95;
+            border-bottom-left-radius: 50% 50%;
+            border-bottom-right-radius: 50% 50%;
+            @extend %encabezados;                
         }
     }
     .mainLaTienda{
@@ -431,7 +453,7 @@ body{
         .encabezado{
             width: 100%;
             height: 100px;
-            background: #3d8676;
+            background: #54BAB9;
             text-align: center;
             border-bottom-left-radius: 50% 50%;
             border-bottom-right-radius: 50% 50%;
@@ -445,10 +467,11 @@ body{
     }
     .mainMas{
         display: grid;
-        grid-template-columns: 1fr 1.5fr;
-        grid-template-rows: 100%;
-        grid-template-areas: 
-                            "imgMas textoTip";
+        grid-template-columns: 1fr 1.3fr;
+        grid-template-rows: 10% 90%;
+        grid-template-areas:
+                            "button button" 
+                            "imgMas textoTip";                    
         align-items: center;
         height: 100%;
         .imgMas{
@@ -456,7 +479,7 @@ body{
             display: flex;
             justify-content: center;
             img{
-                width: 70%;
+                width: 80%;
                 height: 100%;
             }
         }
@@ -468,10 +491,16 @@ body{
                 grid-area: estiloTip;
                 display: flex;
                 justify-content: start;
-                height: 100%;
+                align-items:center;
+                width: 200px;
+                height: 200px;
+                border-radius: 100px;
+                background-color: #59ff5986;
+                text-align: center;
                 h2{
                     font-size: 1.5rem;
                     font-weight: bold;
+                    padding: 10px;
                 }
             }
             .listaTip{
@@ -482,14 +511,312 @@ body{
                 color: white;
                 width: 75%;
                 border-radius: 20px;
+                box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
                 ul{
-                    margin: 15px;
+                    margin: 10px;
                     padding: 10px;
                 }
             }
         }
+        .anteriores{
+            grid-area: button;
+            display: flex;
+            justify-content: right;
+            margin-right: 50px;
+            button{
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                width: 18%;
+                height: auto;
+                background-color: black;
+                color: white;
+                font-family: 'Montserrat', sans-serif;
+                border: none;
+                border-radius: 5px;
+                .icono{
+                    padding: 0 15px;
+                }
+                a{
+                    text-decoration: none;
+                    color: whitesmoke;
+                    font-size: auto;
+                }
+            }
+            button:hover {
+                background-color: #59ce8f;
+                box-shadow: 1px 1px 7px black;
+            }
+        }
     }
 }
+
+/* Estilos de Nutritips */
+
+body{
+    header{
+        .navTips{
+            position: static;
+            width: 100%;
+        }
+        .h1Tips{
+            width: 100%;
+            h1{
+                font-family: 'Montserrat', sans-serif;
+                font-size: 1.9rem;
+                font-weight: bold;
+                color: #54BAB9;
+                margin: 20px 0 0 80px;
+            }
+        }
+    }
+    main{
+        .seccion-1{
+            display: grid;
+            height: 50vw;
+            margin: 15px 80px 80px 80px;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 30% 30% 30%;
+            grid-template-areas:
+                                "principal principal tip-1"
+                                "principal principal tip-2" 
+                                "tipUltimo tip-4 tip-3";
+            gap: 20px;
+            div{
+                a{
+                    text-decoration: none;
+                    padding: 5px;
+                    color: whitesmoke;
+                    background-color: rgba(0, 0, 0, 0.39);
+                    border-radius: 5px;
+                    box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.5);
+                }
+                a:hover{
+                    font-size: 1.3rem;
+                }
+            }
+            .principal{
+                grid-area: principal;
+                background-image: url(../img/background.image/nutritip-principal.webp);
+                @include tips-anteriores;
+                p{
+                    font-size: 3rem;
+                    font-weight: bold;
+                }
+            }
+            .tip-1{
+                grid-area: tip-1;
+                background-image: url(../img/background.image/mas-page2.PNG);
+                @include tips-anteriores;
+             }   
+            .tip-2{
+                grid-area: tip-2;
+                background-image: url(../img/background.image/mas-page3.PNG);
+                @include tips-anteriores;
+            }
+            .tip-3{
+                grid-area: tip-3;
+                background-color: #B97A95;
+                @include tips-anteriores;
+            }
+            .tip-4{
+                grid-area: tip-4;
+                background-color: #59CE8F;
+                @include tips-anteriores;
+            }
+            .tipUltimo{
+                grid-area: tipUltimo;
+                background-image: url(../img/background.image/mas-page.PNG);
+                @include tips-anteriores;           
+            }
+        }
+        .seccion-2{
+            display: grid;
+            height: 60vw;
+            grid-template-columns: 2.2fr 1fr;
+            grid-template-rows: 50% 50%;
+            grid-template-areas: 
+                                "texto img-encabezado"
+                                "img-fondo img-fondo";
+            background-color: #F2D388;
+            border-top: 20px solid rgba(0, 0, 0, 0.8);
+            border-bottom: 20px solid rgba(0, 0, 0, 0.8);
+            font-family: 'Montserrat', sans-serif;
+            margin-bottom: 80px;
+            .imgCabezaS2{
+                grid-area: img-encabezado;
+                display: flex;
+                align-items: flex-end;
+                margin-right: 80px;
+                img{
+                    height: 95%;
+                }
+            }
+            .texto{
+                grid-area: texto;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                text-align: start;
+                margin-left: 22%;
+                .titulo{
+                    font-size: 1.2rem;
+                    font-weight: bold;
+                    padding: 10px 0;
+                }
+            }
+            .imgFondoS2{
+                grid-area: img-fondo;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                margin: 0 80px;
+                img{
+                    width: 80%;
+                    height: 95%;
+                    border-radius: 20px;
+                    box-shadow: 1px 4px 15px rgba(0, 0, 0, 0.3);
+                }
+            }
+        }
+        .seccion-3{
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            grid-template-rows: 10% 8% 25% 8% 7% 7% 35% ;
+            grid-template-areas: 
+                                "h2 h2 h2 h2"
+                                "subtitulo subtitulo subtitulo subtitulo"
+                                "textos3 textos3 textos3 textos3"
+                                "h3 h3 h3 h3"
+                                "prop1 prop2 prop3 prop4"
+                                "prop5 prop5 prop6 prop6"
+                                "imgs3 imgs3 imgs3 imgs3";
+            height: 70vw;
+            font-family: 'Combo', cursive;
+            border-bottom: 20px solid rgba(0, 0, 0, 0.8);
+            .tituloS3{
+                grid-area: h2;
+                @include estilos-seccion3;
+                align-items: flex-end;
+                h2{
+                    color: #790252;
+                    font-size: 3rem;
+                    font-weight: bold;
+                }
+            }
+            .subtituloS3{
+                grid-area: subtitulo;
+                @include estilos-seccion3;
+                font-size: 1.5rem;
+                font-weight: bold;
+            }
+            .textoS3{
+                grid-area: textos3;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                p{
+                    font-size: 1.3rem;
+                    color: #790252;
+                    font-weight: 400;
+                }
+            }
+            .h3S3{
+                grid-area: h3;
+                @include estilos-seccion3;
+                align-items:flex-start;
+                h3{
+                    font-family: 'Combo', cursive;
+                    font-weight: bold;
+                    font-size: 2rem;
+                } 
+            }
+            .prop1{
+                grid-area: prop1;
+                @extend %propiedades-S3;
+                justify-content: end;
+                p{
+                    font-size: 1.3rem;
+                }
+            }
+            .prop2{
+                grid-area: prop2;
+                @extend %propiedades-S3;
+                justify-content: center;
+                p{
+                    font-size: 1.3rem;
+                }
+            }
+            .prop3{
+                grid-area: prop3;
+                @extend %propiedades-S3;
+                justify-content: center;
+                p{
+                    font-size: 1.3rem;
+                }
+            }
+            .prop4{
+                grid-area: prop4;
+                @extend %propiedades-S3;
+                justify-content: start;
+                p{
+                    font-size: 1.3rem;
+                }
+            }
+            .prop5{
+                grid-area: prop5;
+                @extend %propiedades-S3;
+                justify-content: center;
+                p{
+                    font-size: 1.3rem;
+                    padding: 10px;
+                }
+            }
+            .prop6{
+                grid-area: prop6;
+                @extend %propiedades-S3;
+                justify-content: center;
+                p{
+                    font-size: 1.3rem;
+                    padding: 10px;
+                }
+            }
+            div{
+                p{
+                    z-index: 1;
+                }
+            }
+            .imgS3{
+                grid-area: imgs3;
+                height: 100%;
+                img{
+                    position: relative;
+                    top: -50%;
+                    left: 35%;
+                    z-index: 0;
+                }
+            }     
+        }
+        .seccion-4{
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: auto;
+            /*grid-template-areas: ;*/
+        }
+
+
+        
+        .seccion-5{
+            display: grid;
+            grid-template-columns: auto;
+            grid-template-rows: auto;
+            /*grid-template-areas: ;*/
+        }       
+    }
+}
+
+
+
 
 
 
